# hkv

./: README.md  hkv.cabal
src/Data/Store/: Cache.hs  Distributed.hs  KV.hs
test/: CacheSpec.hs  KVSpec.hs  Spec.hs
