name:                hkv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lolepezy/hkv#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          misha.puzanov@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Store.KV, Data.Store.Cache
  build-depends:       base >= 4.7 && < 5
                      , async
                      , binary
                      , binary-orphans
                      , hashable
                      , list-t
                      , stm
                      , stm-containers
                      , transformers

  default-language:    Haskell2010

test-suite hkv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hkv
                     , async
                     , binary
                     , binary-orphans
                     , hashable
                     , list-t
                     , stm
                     , stm-containers
                     , transformers                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lolepezy/hkv
